--- a/project0515/WebContent/css/style.css
+++ b/project0515/WebContent/css/style.css
@@ -1,4 +1,4 @@
-body {
+* {
 	margin: 0;
 	padding: 0;
 	font-family: 'Century Gothic', 'Helvetica Neue', 'Helvetica',
@@ -8,6 +8,13 @@ body {
 
 ul {
 	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+
+a {
+	text-decoration: none;
+	color: #000000;
 }
 
 table {
@@ -98,14 +105,14 @@ textarea {
 	height: 30px;
 }
 
-#search {
+#_search {
 	width: 60%;
 	border: 2px solid #c3c3c3;
 	outline: 0;
 	padding: 5px;
 }
 
-#searchbtn {
+#_searchbtn {
 	vertical-align: middle;
 	padding-left: 7px;
 	cursor: pointer;
