--- a/project0515/WebContent/css/write.css
+++ b/project0515/WebContent/css/write.css
@@ -60,8 +60,8 @@
 
 .title_box {
 	border: 1px solid #c3c3c3;
-	width:100%;
-	margin: 2% 0;
+	margin: 1.5% 0 0.7%;
+	padding: 1% 1% 1% 2%;
 }
 
 hr {
