--- a/project0515/WebContent/WEB-INF/views/layouts.xml
+++ b/project0515/WebContent/WEB-INF/views/layouts.xml
@@ -62,6 +62,10 @@
 		<put-attribute name="main" value="/WEB-INF/views/lists/userlist.jsp" />
 	</definition>
 
+	<definition name="colorchange.tiles" extends="mainpage.tiles">
+		<put-attribute name="main" value="/WEB-INF/views/info/colorchange.jsp" />
+	</definition>
+	
 	<definition name="test.tiles" template="/WEB-INF/views/test.jsp">
 	</definition>
 </tiles-definitions> 
